--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgres
+  adapter: postgresql
   pool: 5
   timeout: 5000
 
@@ -21,5 +21,8 @@ test:
   database: db/test.sqlite3
 
 production:
+  adapter: postgresql
   <<: *default
-  database: db/production.postgres
+  database: hacker_guides_production
+  pool: 5
+  timeout: 5000
