--- a/test/fixtures/guides.yml
+++ b/test/fixtures/guides.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: guides
+#
+#  id           :integer          not null, primary key
+#  name         :string(255)
+#  author       :string(255)
+#  description  :text
+#  price        :integer
+#  availability :boolean          default(FALSE)
+#  created_at   :datetime
+#  updated_at   :datetime
+#  user_id      :integer
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
